# sync_chaos

./: Cargo.toml  LEARNING_GUIDE.md  README.md
src/: main.rs
src/job_system/: scheduler.rs
src/renderer/: camera.rs  grid.rs  mod.rs  ui.rs  util.rs
src/simulation/: attractor.rs  mod.rs  particle.rs
